--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,10 @@ header{
 		flex-direction: column;
 		align-items: center;
 	}
+	.ul-header li a {
+		    padding: 0 0 0 5px;
+		    font-size: 18px;
+	}
 	.right-info{
 		padding: 40px 0;
 	}
